tests/paczka1/fuzzy1/87636333.err
Error in line 7: Z8Kut9 A323 63,87
Error in line 2: Z8Kut9 S940 39,3
Error in line 18: KC2 S940 91,4
Error in line 20: aZIg0HMO S940 64,5
Error in line 11: Z8Kut9 A323 1,9
Error in line 19: KC2 S456 57,6
Error in line 10: RnfZRCMJci S366 30,9
Error in line 25: KC2 A323 39,9
Error in line 37: Z8Kut9 S940 153,1
Error in line 36: RnfZRCMJci S366 27,4
